--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,88 +1,5 @@
-/* all page */
 body {
-  padding-left: 15% !important;
-  padding-right: 15% !important;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  float: center;
-}
-
-/* main_body */
-
-.jumbotron.p-3.text-white.rounded.bg-dark.main-image > img {
-  max-height: 500px!important;
-  width: 100%;
-}
-
-div.header.clearfix{
-  padding-top: 4em;
-}
-
-div > .featurette-image{
-  width: 100%;
-}
-
-/* footer */
-.footer{
-  text-align: center;
-}
-
-/* others */
-hr.featurette-divider{
-  margin-top: 3em;
-  margin-bottom: 3em;
-}
-
-/* signin */
-h3.form-signin-heading{
-  margin-top: 3em;
-  margin-bottom: 1em;
-}
-
-.form-signin {
-  margin-left: 20%;
-  margin-right: 20%;
-}
-
-.form-signin > input, button{
-  margin-bottom: 2em;
-}
-
-div.notice_signup{
-  text-align: right;
-}
-
-.jumbotron {
-  background: white;
-}
-
-select#departmentSelect.custom-select{
-  width: 29.3em;
-}
-
-/* signup */
-.py-5.text-center{
-  padding-bottom: 0em !important;
-}
-div.container.form-signup {
-  padding-left: 10%;
-  padding-right: 10%;
-  float: center;
-}
-
-button.btn.btn-primary.find-department{
-  width: 100%;
-}
-
-/* searches */
-
-.search-project-date{
-  text-align: right;
-}
-
-input#userdate{
-  text-align: right;
-}
-
-
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 /*# sourceMappingURL=style.css.map */
